fix sonarqube analysis issues